test/data/semantic-errors/type-mismatch-return-value.ava
var firstFunction = function () -> return "hello";

var secondFunction = function (x:int) -> return x + 1;

secondFunction(firstFunction());